--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ nav {
 
 body {
 	background: #3F3351;
-	padding-top 0px;
-	padding-bottom 0px;
+	padding-top: 0px;
+	padding-bottom: 0px;
 }
 
 footer {
