--- a/styles.css
+++ b/styles.css
@@ -62,9 +62,25 @@ footer {
   background-color: #DEEDF0;
 }
 
-ul{
-	list-style: square inside url("https://i.ibb.co/VwTYLy3/Png-Item-4236587-1.png");
-	display: table;
-	margin: 0 auto;
-	color: #191919;
-}
+li {
+	color:#fff;
+	list-style:none;
+	position: relative;
+	padding-left:20px;
+	line-height: 2;
+	font-size:18px;
+  }
+  
+  li:before {
+	font-family:FontAwesome;
+	position: absolute;
+	font-style: normal;
+    font-weight: normal;
+	left: 0;
+	color:#318ca0;
+	font-size:18px;
+	content:"\f14a";
+  }
+  li:hover:before {
+	color:#fff;
+  }
